# bing-rewards

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  bing_search.py  keywords.txt  pyproject.toml  requirements.txt  setup.py
.ci/: bump_version.py  prep_version.py  script.sh
.github/: .release-please-manifest.json  dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  lint.yml  pypi.yml  release-please.yml  release.yml  release.yml.unused
bing_rewards/: __init__.py  __main__.py  app.py  bing_rewards.py  options.py
bing_rewards/data/: keywords.txt
bing_rewards/options/: __init__.py
bing_rewards/templates/: config
